--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 自建优质爬虫代理池/IPProxyPoolPro/__pycache__/config.cpython-37.pyc
+自建优质爬虫代理池/IPProxyPoolPro/TestIP/TestIP.py
+自建优质爬虫代理池/IPProxyPoolPro/TestIP/__pycache__/TestIP.cpython-37.pyc
+自建优质爬虫代理池/IPProxyPoolPro/config.py
+自建优质爬虫代理池/IPProxyPoolPro/__pycache__/config.cpython-37.pyc
